syntax = "proto3";

package server.admin;
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "v1/shared/Coupon.proto";

message CouponIDRequest {
  string ID = 1;
}

message UserIDRequest {
  string ID = 1;
}

message CreateCustomCouponRequest {
  string Name = 1;
  uint32 DiscountAmount = 2;
  google.protobuf.Timestamp ExpireAt = 3;
  bool IsCombinationable = 4;
  repeated string Notices = 7;
}

message AffectedCountResponse {
  uint32 AffectedUserCount = 1;
}

message UserAttachedCouponsResponse {
  repeated server.shared.UserAttachedCoupon UserAttachedCoupons = 1;
}


service AdminCouponController {
    rpc GetUserCouponList(UserIDRequest) returns (UserAttachedCouponsResponse){}
    rpc CreateCustomCoupon(CreateCustomCouponRequest) returns (google.protobuf.Empty){}
    rpc SaveCustomCoupon(CouponIDRequest) returns (google.protobuf.Empty){}
    rpc AttachCustomCouponToAllUser(CouponIDRequest) returns (AffectedCountResponse){}
}